[gd_scene load_steps=8 format=3 uid="uid://bqeqmesqlhd1d"]

[ext_resource type="Texture2D" uid="uid://di5pgyor37kst" path="res://Icons/Shop/CoinIcon.png" id="1_0edds"]
[ext_resource type="Script" path="res://Scenes/Shop/gem_shop.gd" id="1_jygbo"]
[ext_resource type="Texture2D" uid="uid://7ia6hbpwp5r1" path="res://Icons/Shop/Planeicon.png" id="4_c15rh"]
[ext_resource type="Texture2D" uid="uid://cycwf88n87lw7" path="res://Icons/Shop/MouseSteroidsUpgrade.png" id="4_k1jnj"]
[ext_resource type="Texture2D" uid="uid://bemuu166lbeye" path="res://Icons/Shop/AutoClickerUpgrade.png" id="5_ik7nt"]
[ext_resource type="Texture2D" uid="uid://b7ddi1muicnmx" path="res://Icons/Shop/LiteralGunIcon.png" id="5_t8c0s"]
[ext_resource type="Texture2D" uid="uid://bji01s8psya28" path="res://Icons/Shop/GemIcon.png" id="6_bx7a7"]

[node name="GemShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jygbo")

[node name="MouseSteroidsUpgradeButton" type="Button" parent="."]
layout_mode = 2
offset_left = 175.0
offset_top = 50.0
offset_right = 335.0
offset_bottom = 210.0
tooltip_text = "Doubles the effectiveness of Mouse Steroids"
icon = ExtResource("4_k1jnj")
icon_alignment = 1
expand_icon = true

[node name="ItemName" type="RichTextLabel" parent="MouseSteroidsUpgradeButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.444
anchor_top = -0.237
anchor_right = 1.431
anchor_bottom = -0.012
offset_left = 0.0400085
offset_top = -0.079998
offset_right = 0.039978
offset_bottom = -0.0799999
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 25
text = "Mouse Steroids Upgrade"
metadata/_edit_use_anchors_ = true

[node name="GemIcon" type="Sprite2D" parent="MouseSteroidsUpgradeButton"]
position = Vector2(35, 194)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_bx7a7")

[node name="ItemCost" type="RichTextLabel" parent="MouseSteroidsUpgradeButton/GemIcon"]
anchors_preset = -1
anchor_left = 1.016
anchor_top = 0.194
anchor_right = 2.72486
anchor_bottom = 0.777286
offset_left = -350.2
offset_top = -349.8
offset_right = -210.4
offset_bottom = -330.1
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 300
text = "Value"
metadata/_edit_use_anchors_ = true

[node name="AutoClickerUpgrade" type="Button" parent="."]
layout_mode = 2
offset_left = 500.0
offset_top = 50.0
offset_right = 660.0
offset_bottom = 210.0
tooltip_text = "Gives Auto Clickers the ability to make use of Mouse Steroids"
icon = ExtResource("5_ik7nt")
icon_alignment = 1
expand_icon = true

[node name="ItemName" type="RichTextLabel" parent="AutoClickerUpgrade"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.3
anchor_top = -0.231
anchor_right = 1.312
offset_top = -0.0400009
offset_right = 0.0799866
offset_bottom = -1.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 25
text = "Auto Clicker Upgrade"
metadata/_edit_use_anchors_ = true

[node name="GemIcon" type="Sprite2D" parent="AutoClickerUpgrade"]
position = Vector2(35, 194)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_bx7a7")

[node name="ItemCost" type="RichTextLabel" parent="AutoClickerUpgrade/GemIcon"]
anchors_preset = -1
anchor_left = 1.016
anchor_top = 0.194
anchor_right = 2.72486
anchor_bottom = 0.777286
offset_left = -350.2
offset_top = -349.8
offset_right = -210.4
offset_bottom = -330.1
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 300
text = "Value"
metadata/_edit_use_anchors_ = true

[node name="Gun" type="Button" parent="."]
layout_mode = 2
offset_left = 850.0
offset_top = 50.0
offset_right = 1010.0
offset_bottom = 210.0
tooltip_text = "[Use Currently Unimplemented]"
icon = ExtResource("5_t8c0s")
icon_alignment = 1
expand_icon = true

[node name="ItemName" type="RichTextLabel" parent="Gun"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34975
anchor_top = -0.237
anchor_right = 0.6935
anchor_bottom = -0.012
offset_left = 0.0400085
offset_top = -0.079998
offset_right = 0.039978
offset_bottom = -0.0799999
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 25
text = "Gun"
metadata/_edit_use_anchors_ = true

[node name="GemIcon" type="Sprite2D" parent="Gun"]
position = Vector2(35, 194)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_bx7a7")

[node name="ItemCost" type="RichTextLabel" parent="Gun/GemIcon"]
anchors_preset = -1
anchor_left = 1.016
anchor_top = 0.194
anchor_right = 2.72486
anchor_bottom = 0.777286
offset_left = -350.2
offset_top = -349.8
offset_right = -210.4
offset_bottom = -330.1
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 300
text = "Value"
metadata/_edit_use_anchors_ = true

[node name="Plane" type="Button" parent="."]
layout_mode = 2
offset_left = 175.0
offset_top = 323.0
offset_right = 335.0
offset_bottom = 483.0
tooltip_text = "[Use Currently Unimplemented]"
icon = ExtResource("4_c15rh")
icon_alignment = 1
expand_icon = true

[node name="ItemName" type="RichTextLabel" parent="Plane"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.281
anchor_top = -0.23075
anchor_right = 0.731
anchor_bottom = -0.00575
offset_left = 0.0400085
offset_top = -0.079998
offset_right = 0.039978
offset_bottom = -0.0799999
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 25
text = "Plane"
metadata/_edit_use_anchors_ = true

[node name="GemIcon" type="Sprite2D" parent="Plane"]
position = Vector2(35, 194)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_bx7a7")

[node name="ItemCost" type="RichTextLabel" parent="Plane/GemIcon"]
anchors_preset = -1
anchor_left = 1.016
anchor_top = 0.194
anchor_right = 2.72486
anchor_bottom = 0.777286
offset_left = -350.2
offset_top = -349.8
offset_right = -210.4
offset_bottom = -330.1
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 300
text = "Value"
metadata/_edit_use_anchors_ = true

[node name="Layout" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1049.0
offset_top = 580.0
offset_right = 1089.0
offset_bottom = 620.0

[node name="BackButton" type="Button" parent="Layout"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0001
offset_top = -48.0
offset_right = 45.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Back
"
metadata/_edit_use_anchors_ = true

[node name="CoinShopButton" type="Button" parent="Layout"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.075
anchor_top = -7.875
anchor_right = 2.525
anchor_bottom = -6.925
offset_top = 3.05176e-05
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Coin Shop       "
metadata/_edit_use_anchors_ = true

[node name="GemIcon" type="Sprite2D" parent="Layout/CoinShopButton"]
position = Vector2(124, 21)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_0edds")

[node name="GemIcon" type="Sprite2D" parent="."]
position = Vector2(33, 620)
scale = Vector2(0.0885714, 0.0885714)
texture = ExtResource("6_bx7a7")

[node name="GemCount" type="RichTextLabel" parent="GemIcon" groups=["gemcounters"]]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 11.2905
offset_top = -180.645
offset_right = 12205.3
offset_bottom = 361.355
grow_horizontal = 2
scale = Vector2(0.860303, 0.897695)
theme_override_font_sizes/normal_font_size = 400
text = "0"

[node name="SHOP_DISCLAIMER" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 588.0
offset_right = 818.0
offset_bottom = 645.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 37
text = "SHOP UNDER DEVELOPMENT!"

[connection signal="pressed" from="MouseSteroidsUpgradeButton" to="." method="_on_mouse_steroids_upgrade_button_pressed"]
[connection signal="pressed" from="AutoClickerUpgrade" to="." method="_on_auto_clicker_upgrade_pressed"]
[connection signal="pressed" from="Gun" to="." method="_on_gun_pressed"]
[connection signal="pressed" from="Plane" to="." method="_on_plane_pressed"]
[connection signal="pressed" from="Layout/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Layout/CoinShopButton" to="." method="_on_coin_shop_button_pressed"]
